--- a/Panel Regression-checkpoint.ipynb
+++ b/Panel Regression-checkpoint.ipynb
@@ -263,7 +263,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using income as level, actual percentage change ($\\textbf{%c}$) per MSA for each variable and the estimated coefficients $\\alpha$ and $\\beta$ are used to derive model predictions ($\\textbf{Model Pred}$) and the difference between the prediction and actual change in area is caluculated ($\\textbf{Diff}$)."
+    "Add percentage change for each period and area."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>%c_Area</th>\n",
+       "      <th>GMP</th>\n",
+       "      <th>%c_GMP</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>%c_Pop</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NAME</th>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Aberdeen, SD</th>\n",
+       "      <th>2001-01-01</th>\n",
+       "      <td>16.274849</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3101395.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>81191.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-01</th>\n",
+       "      <td>16.274849</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3540650.0</td>\n",
+       "      <td>0.141631</td>\n",
+       "      <td>79124.0</td>\n",
+       "      <td>-0.025458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01</th>\n",
+       "      <td>17.380996</td>\n",
+       "      <td>0.067967</td>\n",
+       "      <td>4055637.0</td>\n",
+       "      <td>0.145450</td>\n",
+       "      <td>79207.0</td>\n",
+       "      <td>0.001049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>19.109062</td>\n",
+       "      <td>0.099423</td>\n",
+       "      <td>4701826.0</td>\n",
+       "      <td>0.159331</td>\n",
+       "      <td>81007.0</td>\n",
+       "      <td>0.022725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Aberdeen, WA</th>\n",
+       "      <th>2001-01-01</th>\n",
+       "      <td>0.936891</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15379048.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>447025.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-01</th>\n",
+       "      <td>0.936891</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18052392.0</td>\n",
+       "      <td>0.173830</td>\n",
+       "      <td>484699.0</td>\n",
+       "      <td>0.084277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01</th>\n",
+       "      <td>0.936891</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18344486.0</td>\n",
+       "      <td>0.016180</td>\n",
+       "      <td>513032.0</td>\n",
+       "      <td>0.058455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>0.936891</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19646619.0</td>\n",
+       "      <td>0.070982</td>\n",
+       "      <td>536275.0</td>\n",
+       "      <td>0.045305</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Area   %c_Area         GMP    %c_GMP  \\\n",
+       "NAME         Year                                                    \n",
+       "Aberdeen, SD 2001-01-01  16.274849       NaN   3101395.0       NaN   \n",
+       "             2006-01-01  16.274849  0.000000   3540650.0  0.141631   \n",
+       "             2010-01-01  17.380996  0.067967   4055637.0  0.145450   \n",
+       "             2016-01-01  19.109062  0.099423   4701826.0  0.159331   \n",
+       "Aberdeen, WA 2001-01-01   0.936891       NaN  15379048.0       NaN   \n",
+       "             2006-01-01   0.936891  0.000000  18052392.0  0.173830   \n",
+       "             2010-01-01   0.936891  0.000000  18344486.0  0.016180   \n",
+       "             2016-01-01   0.936891  0.000000  19646619.0  0.070982   \n",
+       "\n",
+       "                         Population    %c_Pop  \n",
+       "NAME         Year                              \n",
+       "Aberdeen, SD 2001-01-01     81191.0       NaN  \n",
+       "             2006-01-01     79124.0 -0.025458  \n",
+       "             2010-01-01     79207.0  0.001049  \n",
+       "             2016-01-01     81007.0  0.022725  \n",
+       "Aberdeen, WA 2001-01-01    447025.0       NaN  \n",
+       "             2006-01-01    484699.0  0.084277  \n",
+       "             2010-01-01    513032.0  0.058455  \n",
+       "             2016-01-01    536275.0  0.045305  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ule = df[['Area','GMP','Population']].copy()\n",
+    "ule['%c_Area'] = (ule.groupby('NAME')['Area'].apply(pd.Series.pct_change))\n",
+    "ule['%c_GMP'] = (ule.groupby('NAME')['GMP'].apply(pd.Series.pct_change))\n",
+    "ule['%c_Pop'] = (ule.groupby('NAME')['Population'].apply(pd.Series.pct_change))\n",
+    "ule = ule[['Area','%c_Area','GMP','%c_GMP','Population','%c_Pop']]\n",
+    "display(ule.head(8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using income as level, actual percentage change per MSA for each variable and the estimated coefficients $\\alpha$ and $\\beta$ are used to derive model predictions ($\\textbf{Model Pred}$) and the difference between the prediction and actual change in area is calculated ($\\textbf{sd_Residuals}$)."
    ]
   },
   {
@@ -567,11 +735,6 @@
     }
    ],
    "source": [
-    "ule = df[['Area','GMP','Population']].copy()\n",
-    "ule['%c_Area'] = (ule.groupby('NAME')['Area'].apply(pd.Series.pct_change))\n",
-    "ule['%c_GMP'] = (ule.groupby('NAME')['GMP'].apply(pd.Series.pct_change))\n",
-    "ule['%c_Pop'] = (ule.groupby('NAME')['Population'].apply(pd.Series.pct_change))\n",
-    "ule = ule[['Area','%c_Area','GMP','%c_GMP','Population','%c_Pop']]\n",
     "alpha = .5651\n",
     "beta = .9624\n",
     "ule['Model Pred'] = (alpha-beta) * ule['%c_Pop']+ule['%c_GMP']\n",
